# git-jira

./: CONTRIBUTING  LICENSE  MAINTAINERS  README.md  in.mov  pyproject.toml
.github/workflows/: ci.yml  release.yml
git_jira/: git_jira.py
tests/: test_git_jira.py
