[tool.poetry]
name = "git-jira"
version = "0.0.0"
description = ""
authors = ["Fabian Neugart <f.neugart@mytaxi.com>"]
readme = "README.md"
packages = [{include = "git_jira"}]

[tool.poetry.scripts]
git-jira  = 'git_jira.git_jira:main'

[tool.poetry.dependencies]
python = "^3.11"
simple-term-menu = "^1.6.4"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
